k8s/dotmakeup.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dotmakeup
spec:
  selector:
    matchLabels:
      app: dotmakeup 
  serviceName: "dotmakeup"
  replicas: 3 
  minReadySeconds: 10 
  template:
    metadata:
      labels:
        app: dotmakeup 
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - dotmakeup
              topologyKey: "kubernetes.io/hostname"
      terminationGracePeriodSeconds: 30
      containers:
        - name: dotmakeup-social-sidecar
          image: cloutier/dotmakeup-social-sidecar:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: sidecar
          livenessProbe:
            httpGet:
              path: /twitter/_meta
              port: 5000
            initialDelaySeconds: 10 
            periodSeconds: 3
        - name: dotmakeup
          image: cloutier/bird.makeup:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web
          resources:
            requests:
              memory: "900Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /About
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: dotmakeup
spec:
  type: NodePort
  selector:
    app: dotmakeup
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30500
