k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotmakeup-bird
  annotations:
    certmanager.k8s.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - bird.makeup
      secretName: ssl-cert-bird-dotmakeup
    - hosts:
        - kilogram.makeup
      secretName: ssl-cert-kilogram-dotmakeup
  rules:
    - host: bird.makeup
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotmakeup
                port:
                  number: 80
    - host: kilogram.makeup
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotmakeup-kilo
                port:
                  number: 80
